<resources>
    <string name="app_name">Coffe Latte</string>
    <string name="classicLatte">Classic Latte</string>
    <string name="vanillaLatte">Vanilla Latte</string>
    <string name="caramelLatte">Caramel Latte</string>
    <string name="mochaLatte">Mocha Latte</string>
    <string name="teslimatSure">15 min</string>
    <string name="teslimatBaslik">Delivery</string>
    <string name="coffeAciklama">"Coffee lover, get ready to sip your perfect brew!"</string>
    <string name="fiyatYazi">$ 9.98</string>
    <string name="buttonYazi">ADD TO CART</string>
</resources>
